[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agents>=1.4.0",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "openai-agents>=0.2.11",
    "python-dotenv>=1.1.1",
    "supabase>=2.20.0",
    "uvicorn>=0.35.0",
]
